--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <ul>
             <!-- membuat isi list  -->
             <li align="center" style="list-style-type: none;padding: 2%;">
-                <a href="#" style="padding:2%; border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;">Home</a>
-                <a href="about.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 1 </a>
-                <a href="about2.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 2 </a>
-                <a href="about3.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 3 </a>
+                <a href="index.html" style="padding:2%; border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;">Home</a>
+                <a href="html/about.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 1 </a>
+                <a href="html/about2.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 2 </a>
+                <a href="html/about3.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 3 </a>
             </li>
         </ul>
     </div>
@@ -48,7 +48,7 @@
     <div style="margin-left: 4%;">
         <h3 style="color: rgb(172, 23, 23); margin-left: 1.5cm;  background-color: rgb(183, 198, 178); "> Taylor's Most Iconic Performance Pict </h3>
         <!-- memasukkan gambar dgn element img -->
-        <img src="TaylorSwift.jpeg" style="margin-left: 1.5cm;" />
+        <img src="img/TaylorSwift.jpeg" style="margin-left: 1.5cm;" />
     </div>
     <!-- CONTENT 2 END -->
 </body>
