--- a/html/about.html
+++ b/html/about.html
@@ -16,10 +16,10 @@
         <ul>
             <!-- membuat isi list  -->
             <li align="center" style="list-style-type: none;padding: 2%;">
-                <a href="index.html" style="padding:2%; border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;">Home</a>
-                <a href="html/about.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 1 </a>
-                <a href="html/about2.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 2 </a>
-                <a href="html/about3.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 3 </a>
+                <a href="../index.html" style="padding:2%; border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;">Home</a>
+                <a href="about.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 1 </a>
+                <a href="about2.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 2 </a>
+                <a href="about3.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 3 </a>
             </li>
         </ul>
     </div>
@@ -71,12 +71,13 @@
     <!-- CONTENT 1 END -->
 
     <!-- CONTENT 2 -->
-    <h2 style=" margin-top:2cm; margin-left: 3cm; color: rgb(172,23,23); background-color: rgb(183, 198, 178)"> About Album </h2>
+    
     <div>
-        <img src="img/TTPD.jpeg" style="margin-left: 3cm;"/>
+        <h2 style=" margin-top:2cm; margin-left: 3cm; color: rgb(172,23,23); background-color: rgb(183, 198, 178)"> About Album </h2>
+        <img src="/img/TTPD.jpeg" style="margin-left: 3cm;"/>
     </div>
     <div>
-        <p align="justify" style=" margin-top:-8cm;margin-left: 12cm;"> 
+        <p align="justify" style="margin-left: 12cm;"> 
             <!-- br digunakan untuk mengganti baris -->
             The Tortured Poets Department is the eleventh album by Taylor Swift, it was realesed on April, 2024.
             The songs introspect on her public<br> and private lives, detailing tumult and sorrow via motifs of self-awareness, 
