--- a/html/about2.html
+++ b/html/about2.html
@@ -12,10 +12,10 @@
     <div>
         <ul>
             <li align="center" style="list-style-type: none;padding: 2%;">
-                <a href="index.html" style="padding:2%; border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;">Home</a>
-                <a href="html/about.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 1 </a>
-                <a href="html/about2.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 2 </a>
-                <a href="html/about3.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 3 </a>
+                <a href="../index.html" style="padding:2%; border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;">Home</a>
+                <a href="about.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 1 </a>
+                <a href="about2.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 2 </a>
+                <a href="about3.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 3 </a>
             </li>
         </ul>
     </div>
@@ -56,7 +56,7 @@
         <img src="img/Reputation.png" style="margin-left: 3cm;"/>
     </div>
     <div>
-        <p align="justify" style=" margin-top:-8cm;margin-left: 12cm;"> 
+        <p align="justify" style=" margin-left: 12cm;"> 
             Reputation (Taylor's Version) is the 5th re-recorded album by Taylor Swift. It was released on November 13, 2024, through Republic Records.<br>
             Inspired by Swift's romantic relationships and tarnished media image caused by celebrity disputes, the songs on Reputation altogether form a<br> 
             linear narrative about a protagonist expressing anger and vengeance against wrongdoers and finding solace in a blossoming love. A feud with<br>
