--- a/html/about3.html
+++ b/html/about3.html
@@ -12,10 +12,10 @@
     <div>
         <ul>
             <li align="center" style="list-style-type: none;padding: 2%;">
-                <a href="index.html" style="padding:2%; border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;">Home</a>
-                <a href="html/about.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 1 </a>
-                <a href="html/about2.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 2 </a>
-                <a href="html/about3.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 3 </a>
+                <a href="../index.html" style="padding:2%; border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;">Home</a>
+                <a href="about.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 1 </a>
+                <a href="about2.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 2 </a>
+                <a href="about3.html" style="padding: 2%;border: 3px solid rgb(183, 198, 178); color:rgb(172, 23, 23) ;"> Top 3 </a>
             </li>
         </ul>
     </div>
@@ -56,10 +56,10 @@
     <!--CONTENT 2  -->
     <h2 style=" margin-top:2cm; margin-left: 3cm; color: rgb(172,23,23); background-color: rgb(183, 198, 178)"> About Album </h2>
     <div>
-        <img src="img/Lover.jpeg" style="margin-left: 3cm;width: 20%;"/>
+        <img src="/img/Lover.jpeg" style="margin-left: 3cm;width: 20%;"/>
     </div>
     <div>
-        <p align="justify" style=" margin-top:-8cm;margin-left: 12cm;"> 
+        <p align="justify" style="margin-left: 12cm;"> 
             Lover is the seventh studio album by Taylor Swift, released on August 23, 2019.She produced Lover with Jack Antonoff, Joel Little,Louis<br>
             Bell, and Frank Dukes. Described by Swift as a "love letter to love", the album explores wide-ranging emotions likeinfatuation, commitment,<br>
             lust, and heartache; a few songs discuss political issues such as LGBT rights and feminism. The production incorporates a 1980s-inspired<br> 
